[Added] button loading

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
+    "react-native-animate-loading-button": "^1.0.3",
     "react-native-elements": "^1.2.6",
     "react-native-paper": "^3.0.0",
     "react-native-vector-icons": "^6.6.0"
