--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-elements": "^1.2.6",
     "react-native-flash-message": "^0.1.15",
+    "react-native-gesture-handler": "^1.4.1",
     "react-native-i18n": "^2.0.15",
     "react-native-inappbrowser-reborn": "^3.1.0",
     "react-native-paper": "^3.0.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.0.10",
+    "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
