--- a/ios/Podfile
+++ b/ios/Podfile
@@ -40,6 +40,8 @@ target 'FamilyPlan' do
 
   pod 'RNI18n', :path => '../node_modules/react-native-i18n'
 
+  pod 'RNTextGradientView', :path => '../node_modules/react-native-text-gradient'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
