--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-i18n": "^2.0.15",
     "react-native-inappbrowser-reborn": "^3.1.0",
+    "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-paper": "^3.0.0",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
+    "react-navigation-material-bottom-tabs": "^2.1.3",
     "react-navigation-stack": "^1.10.2"
   },
   "devDependencies": {
