--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-inappbrowser-reborn": "^3.1.0",
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-paper": "^3.0.0",
+    "react-native-snap-carousel": "^3.8.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
