--- a/ios/Podfile
+++ b/ios/Podfile
@@ -42,6 +42,10 @@ target 'FamilyPlan' do
 
   pod 'RNTextGradientView', :path => '../node_modules/react-native-text-gradient'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
+  pod 'react-native-image-resizer', :path => '../node_modules/react-native-image-resizer'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
