--- a/package.json
+++ b/package.json
@@ -7,7 +7,15 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "remove-drawable": "cd android/app/src/main/res && rm -rf drawable-hdpi && rm -rf drawable-mdpi && rm -rf drawable-xhdpi && rm -rf drawable-xxhdpi && rm -rf drawable-xxxhdpi",
+    "fixed-release-android": "react-native bundle --platform android --dev false --entry-file index.js --bundle-output android/app/src/main/assets/index.android.bundle --assets-dest android/app/src/main/res",
+    "build-release-android": "npm run fixed-release-android && npm run remove-drawable && cd android && ./gradlew clean && ./gradlew assembleRelease",
+    "internalbuild": "cd android && export ENVFILE=.env.internal && ./gradlew assembleInternalRelease",
+    "internalrun": "npx react-native run-android --variant=internalDebug",
+    "run-ipx": "react-native run-ios --simulator='iPhone X'",
+    "run-ip8": "react-native run-ios --simulator='iPhone 8'",
+    "run-android": "react-native run-android"
   },
   "dependencies": {
     "react": "16.9.0",
@@ -18,15 +26,23 @@
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-i18n": "^2.0.15",
+    "react-native-image-picker": "^1.1.0",
+    "react-native-image-resizer": "^1.0.1",
     "react-native-inappbrowser-reborn": "^3.1.0",
     "react-native-material-bottom-navigation": "^1.0.4",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-paper": "^3.0.0",
+    "react-native-pull-to-refresh": "^2.1.3",
+    "react-native-qrcode": "^0.2.7",
     "react-native-snap-carousel": "^3.8.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.3",
-    "react-navigation-stack": "^1.10.2"
+    "react-navigation-stack": "^1.10.2",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
