--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -179,6 +179,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-gesture-handler')
     implementation project(':@react-native-community_async-storage')
     implementation project(':react-native-image-resizer')
     implementation project(':react-native-image-picker')
