--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^7.6.0",
+    "react-native-modalize": "^1.2.3",
     "react-native-paper": "^3.0.0",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-native-qrcode": "^0.2.7",
