--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-image-resizer": "^1.0.1",
     "react-native-inappbrowser-reborn": "^3.1.0",
+    "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-modal-datetime-picker": "^7.6.0",
