--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-image-picker": "^1.1.0",
     "react-native-image-resizer": "^1.0.1",
     "react-native-inappbrowser-reborn": "^3.1.0",
+    "react-native-languages": "^3.0.2",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-material-dropdown": "^0.11.1",
@@ -38,6 +39,7 @@
     "react-native-paper": "^3.0.0",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-native-qrcode": "^0.2.7",
+    "react-native-restart": "^0.0.13",
     "react-native-snap-carousel": "^3.8.2",
     "react-native-text-gradient": "^0.1.7",
     "react-native-vector-icons": "^6.6.0",
