--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.6.2",
+    "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
     "react-native-animate-loading-button": "^1.0.3",
+    "react-native-camera": "^3.8.0",
     "react-native-elements": "^1.2.6",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
@@ -37,6 +39,7 @@
     "react-native-modal-datetime-picker": "^7.6.0",
     "react-native-modalize": "^1.2.3",
     "react-native-paper": "^3.0.0",
+    "react-native-permissions": "^2.0.3",
     "react-native-pull-to-refresh": "^2.1.3",
     "react-native-qrcode": "^0.2.7",
     "react-native-restart": "^0.0.13",
