--- a/ios/Podfile
+++ b/ios/Podfile
@@ -58,6 +58,8 @@ target 'FamilyPlan' do
 
   pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
