--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-image-resizer": "^1.0.1",
     "react-native-inappbrowser-reborn": "^3.1.0",
     "react-native-languages": "^3.0.2",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-material-bottom-navigation": "^1.0.4",
     "react-native-material-dropdown": "^0.11.1",
@@ -45,6 +46,7 @@
     "react-native-restart": "^0.0.13",
     "react-native-snap-carousel": "^3.8.2",
     "react-native-text-gradient": "^0.1.7",
+    "react-native-touchable-scale": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.3",
