--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-restart": "^0.0.13",
     "react-native-snap-carousel": "^3.8.2",
+    "react-native-swipeout": "^2.3.6",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touchable-scale": "^2.1.0",
     "react-native-vector-icons": "^6.6.0",
