--- a/ios/Podfile
+++ b/ios/Podfile
@@ -60,6 +60,8 @@ target 'FamilyPlan' do
 
   pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
 
+  pod 'RNDateTimePicker', :path => '../node_modules/@react-native-community/datetimepicker'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
