--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-elements": "^1.2.6",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
+    "react-native-gifted-chat": "^0.11.3",
     "react-native-i18n": "^2.0.15",
     "react-native-image-picker": "^1.1.0",
     "react-native-image-resizer": "^1.0.1",
