--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-native-action-button": "^2.8.5",
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-camera": "^3.8.0",
+    "react-native-date-picker": "^2.7.0",
     "react-native-elements": "^1.2.6",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
