--- a/ios/Podfile
+++ b/ios/Podfile
@@ -64,6 +64,8 @@ target 'FamilyPlan' do
 
   pod 'react-native-date-picker', :path => '../node_modules/react-native-date-picker'
 
+  pod 'RNAppleAuthentication', :path => '../node_modules/@invertase/react-native-apple-authentication'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
