--- a/ios/Podfile
+++ b/ios/Podfile
@@ -66,6 +66,12 @@ target 'FamilyPlan' do
 
   pod 'RNAppleAuthentication', :path => '../node_modules/@invertase/react-native-apple-authentication'
 
+  pod 'Firebase/Core', '~>5.20.2'
+
+  pod 'Firebase/Messaging', '~>5.20.2'
+
+  pod 'RNFirebase', :path => '../node_modules/react-native-firebase/ios'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
@@ -81,5 +87,11 @@ target 'FamilyPlan-tvOS' do
     inherit! :search_paths
     # Pods for testing
   end
+end
 
+post_install do |installer|
+  rnfirebase = installer.pods_project.targets.find { |target| target.name == 'RNFirebase' }
+  rnfirebase.build_configurations.each do |config|
+    config.build_settings['HEADER_SEARCH_PATHS'] = '$(inherited) ${PODS_ROOT}/Headers/Public/**'
+  end
 end
