--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-camera": "^3.8.0",
     "react-native-date-picker": "^2.7.0",
     "react-native-elements": "^1.2.6",
+    "react-native-fbsdk": "^1.1.1",
     "react-native-firebase": "^5.6.0",
     "react-native-flash-message": "^0.1.15",
     "react-native-gesture-handler": "^1.4.1",
