--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,8 +189,13 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-firebase')
+    implementation 'com.google.firebase:firebase-analytics:16.0.9'
+    implementation "com.google.android.gms:play-services-base:16.1.0"
+    implementation "com.google.firebase:firebase-core:16.0.9"
+    implementation "com.google.firebase:firebase-messaging:18.0.0"
+    implementation 'me.leolin:ShortcutBadger:1.1.21@aar'
     implementation project(':react-native-picker-module')
-    implementation project(':react-native-fbsdk')
     compile 'com.android.support:multidex:1.0.0'
     implementation project(':react-native-date-picker')
     implementation project(':@react-native-community_datetimepicker')
@@ -227,3 +232,4 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+apply plugin: 'com.google.gms.google-services'
