--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-swipeout": "^2.3.6",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touchable-scale": "^2.1.0",
+    "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.3",
