--- a/package.json
+++ b/package.json
@@ -21,13 +21,16 @@
     "@invertase/react-native-apple-authentication": "^0.1.1",
     "@react-native-community/async-storage": "^1.6.2",
     "@react-native-community/datetimepicker": "^2.1.0",
+    "d3-interpolate": "^1.4.0",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
     "react-native": "0.61.2",
     "react-native-action-button": "^2.8.5",
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-camera": "^3.8.0",
+    "react-native-content-loader": "^0.1.6",
     "react-native-date-picker": "^2.7.0",
+    "react-native-easy-content-loader": "^0.2.5",
     "react-native-elements": "^1.2.6",
     "react-native-firebase": "^5.6.0",
     "react-native-flash-message": "^0.1.15",
@@ -51,6 +54,7 @@
     "react-native-qrcode": "^0.2.7",
     "react-native-restart": "^0.0.13",
     "react-native-snap-carousel": "^3.8.2",
+    "react-native-svg": "^10.0.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-text-gradient": "^0.1.7",
     "react-native-touchable-scale": "^2.1.0",
