--- a/ios/Podfile
+++ b/ios/Podfile
@@ -72,6 +72,8 @@ target 'FamilyPlan' do
 
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'ReactNativeDarkMode', :path => '../node_modules/react-native-dark-mode'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
