--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-animate-loading-button": "^1.0.3",
     "react-native-camera": "^3.8.0",
     "react-native-content-loader": "^0.1.6",
+    "react-native-dark-mode": "^0.2.1",
     "react-native-date-picker": "^2.7.0",
     "react-native-easy-content-loader": "^0.2.5",
     "react-native-elements": "^1.2.6",
