--- a/package.json
+++ b/package.json
@@ -64,8 +64,10 @@
     "react-navigation": "^4.0.10",
     "react-navigation-material-bottom-tabs": "^2.1.3",
     "react-navigation-stack": "^1.10.2",
-    "react-redux": "^7.1.1",
-    "redux": "^4.0.4"
+    "react-redux": "^7.1.3",
+    "redex": "^0.0.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
