--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -189,6 +189,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-touch-id')
     implementation project(':react-native-dark-mode')
     implementation project(':react-native-svg')
     implementation project(':react-native-firebase')
