--- a/ios/Podfile
+++ b/ios/Podfile
@@ -74,6 +74,8 @@ target 'FamilyPlan' do
 
   pod 'ReactNativeDarkMode', :path => '../node_modules/react-native-dark-mode'
 
+  pod 'TouchID', :path => '../node_modules/react-native-touch-id'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
