--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-native-svg": "^10.0.0",
     "react-native-swipeout": "^2.3.6",
     "react-native-text-gradient": "^0.1.7",
+    "react-native-touch-id": "^4.4.1",
     "react-native-touchable-scale": "^2.1.0",
     "react-native-user-avatar": "^1.0.4",
     "react-native-vector-icons": "^6.6.0",
