--- a/ios/Podfile
+++ b/ios/Podfile
@@ -76,6 +76,8 @@ target 'FamilyPlan' do
 
   pod 'TouchID', :path => '../node_modules/react-native-touch-id'
 
+  pod 'RNCPushNotificationIOS', :path => '../node_modules/@react-native-community/push-notification-ios'
+
   target 'FamilyPlanTests' do
     inherit! :search_paths
     # Pods for testing
