--- a/ios/FamilyPlan/Info.plist
+++ b/ios/FamilyPlan/Info.plist
@@ -91,6 +91,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <!-- Facebook login ios -->
   <key>CFBundleURLTypes</key>
   <array>
     <dict>
@@ -110,6 +111,29 @@
     <string>fb-messenger-share-api</string>
     <string>fbauth2</string>
     <string>fbshareextension</string>
+  </array>
+  <!-- Line login ios -->
+  <key>LineSDKConfig</key>
+  <dict>
+      <key>ChannelID</key>
+      <string>1653788362</string>
+  </dict>
+  <key>CFBundleURLTypes</key>
+  <array>
+      <dict>
+          <key>CFBundleTypeRole</key>
+          <string>Editor</string>
+          <key>CFBundleURLSchemes</key>
+          <array>
+              <!-- Specify URL scheme to use when returning from LINE to your app. -->
+              <string>line3rdp.$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+          </array>
+      </dict>
+  </array>
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+      <!-- Specify URL scheme to use when launching LINE from your app. -->
+      <string>lineauth2</string>
   </array>
 </dict>
 </plist>
