--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'FamilyPlan'
+include ':@react-native-community_google-signin'
+project(':@react-native-community_google-signin').projectDir = new File(rootProject.projectDir, '../node_modules/@react-native-community/google-signin/android')
 include ':react-native-line-sdk'
 project(':react-native-line-sdk').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-line-sdk/android')
 include ':react-native-fbsdk'
