--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -237,5 +237,12 @@ task copyDownloadableDepsToLibs(type: Copy) {
     into 'libs'
 }
 
+repositories {
+    jcenter()
+    flatDir {
+        dirs 'libs'
+    }
+}
+
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.gms.google-services'
