--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,10 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 17
         compileSdkVersion = 28
         targetSdkVersion = 28
+        googlePlayServicesAuthVersion = "16.0.1"
     }
     repositories {
         google()
