--- a/android/app/src/main/res/raw/app.json
+++ b/android/app/src/main/res/raw/app.json
@@ -1,4 +1,6 @@
 {
   "name": "FamilyPlan",
-  "displayName": "FamilyPlan"
+  "displayName": "FamilyPlan",
+  "scbEasyApi": false,
+  "notPasswordInGroup": false
 }
