--- a/ios/FamilyPlan/Info.plist
+++ b/ios/FamilyPlan/Info.plist
@@ -22,12 +22,12 @@
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
 	<array>
-    <dict>
-     <key>CFBundleURLSchemes</key>
-     <array>
-       <string>fb844446596009232</string>
-     </array>
-     </dict>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>fb844446596009232</string>
+			</array>
+		</dict>
 		<dict>
 			<key>CFBundleTypeRole</key>
 			<string>Editor</string>
@@ -46,11 +46,15 @@
 			<key>item0</key>
 			<string></string>
 		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>familyPlan</string>
+			</array>
+		</dict>
 	</array>
-  <key>FacebookAppID</key>
-  <string>844446596009232</string>
-  <key>FacebookDisplayName</key>
-  <string>Family Plan</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>FacebookAppID</key>
@@ -59,10 +63,10 @@
 	<string>FamilyPlan</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
-    <string>fbapi</string>
-    <string>fb-messenger-share-api</string>
-    <string>fbauth2</string>
-    <string>fbshareextension</string>
+		<string>fbapi</string>
+		<string>fb-messenger-share-api</string>
+		<string>fbauth2</string>
+		<string>fbshareextension</string>
 		<string>lineauth2</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
